# TvRQ

./: .gitignore  CMakeLists.txt  README.txt
algebra/: CMakeLists.txt  gf256.c  gf256.h  m256v.c  m256v.h  m2v.c  m2v.h  mv_generic.h
api/: CMakeLists.txt  rq_api.h  tvrq_api.c
in/: CMakeLists.txt  tvrqapi.pc.in  tvrqapiConfig.cmake.in
rfc6330_alg/: CMakeLists.txt  parameters.c  parameters.h  rand.c  rand.h  tuple.c  tuple.h
samples_tests/: CMakeLists.txt
samples_tests/api/: CMakeLists.txt  codec_speed.cpp  file_enc_dec.cpp  gen_syms.c  rq_encdec_match.c  rq_failprob.c  rq_syst_inv.c
samples_tests/devel/: CMakeLists.txt  hdpc.c  ldpc.c  lt.c  parameters.c  rq_matrix.c
samples_tests/test_utils/: CMakeLists.txt  m2v_m256v_mat_pair.c  m2v_m256v_mat_pair.h  parse_esis.c  parse_esis.h  perm.c  perm.h  test_utils.c  test_utils.h  utils.h
samples_tests/unit_tests/: CMakeLists.txt  gf256.c  m256v_basic.c  m256v_lu.c  m256v_splitsolve.c  m2v_basic.c  m2v_lu.c  mv_submat.c
tools/: CMakeLists.txt
tools/binfiles/: hex2bin.py  print_symfile.py
tools/gf256/: get_primpoly.c  gf256.py  write_as_poly.c
tools/perf_eval/: run_tests.sh
tools/py_mod_tvrq/: CMakeLists.txt  gen_tvrq.py
tvrq/: CMakeLists.txt  hdpc.c  hdpc.h  ldpc.c  ldpc.h  lt.c  lt.h  rq_matrix.c  rq_matrix.h
